Adição dos query methods